Sat Nov 11 15:00:01 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * run.c (run_setup): cleared away Windows NT stuff, left skeleton
        functions that just complain and die for now.

Fri Nov 10 14:21:14 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * Makefile.in (COMMON_SOURCES, COMMON_OBJECTS): removed filesubr
        and run, since we have OS/2-specific versions of them now.
        (DISTFILES): Include Makefile in distribution, since people won't
        be running configure on their OS/2 systems.
        (LIB_SOURCES, LIB_OBJECTS): new vars; we'll just build stuff in
        the lib directory and link it in directly.
        Made rules for compiling objects and for the full executable.
        (SHELL): got rid of this var, no need for it here.
        Use a pattern rule for obj files.
        Some other minor tweaks for OS/2.
        
        * threads.c: new file.

Wed Nov  8 11:14:46 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * run.c: include <stdarg.h> and <stdio.h>.
        Change all VA_START to va_start.
        Don't ask HAVE_VPRINTF -- this is an OS/2-specific file and we can
        take things for granted.
        Started simplifying old NT `HANDLE' code.
        
        * Makefile.in (OS2_SOURCES): added run.c.

        * run.c: new file, copied from ../windows-NT/run.c.  Started
        making changes for OS/2.

        * test-makefile (all): don't bother to echo $CFLAGS; we can just
        read the compilation command.

        * filesubr.c (unlink_file): make this work on OS/2.
        (unlink_file_dir): don't ask if errno == EISDIR.  We ain't
        got EISDIR in OS/2.
        (deep_remove_dir): use EACCESS to determine if directory
        nonempty.  We ain't got ENOTEMPTY in OS/2.
        (that_swing): removed references.  We ain't got that_swing in
        OS/2.
        (rename_file): just use unlink_file(); move to after definition of
        unlink_file() so we don't have to deal with IBM C/C++'s strange